# Call-Me-Maybe-2

./: Makefile  README.md  pyproject.toml
data/input/: functions_definition.json
data/output/: function_calling_results.json
llm_sdk/: __init__.py
src/: __main__.py  constrained_decoding.py  demo_llm.py  parser.py  pipeline.py  pydantic_models.py
tests/: test_models.py  test_parser.py
